Prevent horizontal scroll in small devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@ body {
 
 @media screen and (max-width: 480px) {
   html, body {
-    min-width: 320px;
+    min-width: auto;
   }
 }
 html {
