--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -19,7 +19,7 @@
 	// Ensures page width is always >=320px.
 		@include breakpoint('<=xsmall') {
 			html, body {
-				min-width: 320px;
+				min-width: auto;
 			}
 		}
 
